--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
         "test": "jest",
         "migrate": "node scripts/migrate.js",
         "seed": "node scripts/seed.js",
-                        "test:leads": "node test-leads-api.js",
-    "migrate:leads": "node scripts/leads-migration.js",
-    "test:estimates": "node test-estimates-api.js",
-    "migrate:estimates": "node scripts/estimates-migration.js",
-    "test:fleet": "node test-fleet-api.js",
-    "migrate:fleet": "node scripts/fleet-migration.js",
-    "test:employees": "node test-employees-api.js",
-    "migrate:employees": "node scripts/employees-migration.js",
-    "test:client-portal": "node test-client-portal-api.js",
-    "migrate:client-portal": "node scripts/client-portal-migration.js"
+        "test:leads": "node test-leads-api.js",
+        "migrate:leads": "node scripts/leads-migration.js",
+        "test:estimates": "node test-estimates-api.js",
+        "migrate:estimates": "node scripts/estimates-migration.js",
+        "test:fleet": "node test-fleet-api.js",
+        "migrate:fleet": "node scripts/fleet-migration.js",
+        "test:employees": "node test-employees-api.js",
+        "migrate:employees": "node scripts/employees-migration.js",
+                    "test:client-portal": "node test-client-portal-api.js",
+        "test:signup": "node test-signup-endpoint.js",
+        "test:business": "node test-business-registration.js",
+        "test:db": "node test-db-connection.js",
+        "test:table": "node test-table-structure.js",
+        "test:auth": "node test-auth-endpoints.js",
+        "migrate:client-portal": "node scripts/client-portal-migration.js",
+        "migrate:db": "node scripts/client-portal-migration.js"
     },
     "keywords": [
         "junk-removal",
@@ -30,24 +36,26 @@
     "author": "Your Name",
     "license": "MIT",
     "dependencies": {
-        "express": "^4.18.2",
-        "mysql2": "^3.6.5",
-        "cors": "^2.8.5",
-        "helmet": "^7.1.0",
-        "express-rate-limit": "^7.1.5",
-        "multer": "^1.4.5-lts.1",
-        "jsonwebtoken": "^9.0.2",
+        "axios": "^1.6.0",
+        "bcrypt": "^6.0.0",
         "bcryptjs": "^2.4.3",
-        "dotenv": "^16.3.1",
-        "joi": "^17.11.0",
-        "uuid": "^9.0.1",
-        "moment": "^2.29.4",
         "compression": "^1.7.4",
-        "morgan": "^1.10.0"
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-rate-limit": "^7.1.5",
+        "helmet": "^7.1.0",
+        "joi": "^17.11.0",
+        "jsonwebtoken": "^9.0.2",
+        "moment": "^2.29.4",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
+        "mysql2": "^3.6.5",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
-        "nodemon": "^3.0.2",
         "jest": "^29.7.0",
+        "nodemon": "^3.0.2",
         "supertest": "^6.3.3"
     },
     "engines": {
