--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
         "migrate:fleet": "node scripts/fleet-migration.js",
         "test:employees": "node test-employees-api.js",
         "migrate:employees": "node scripts/employees-migration.js",
-                    "test:client-portal": "node test-client-portal-api.js",
+        "test:client-portal": "node test-client-portal-api.js",
         "test:signup": "node test-signup-endpoint.js",
         "test:business": "node test-business-registration.js",
         "test:db": "node test-db-connection.js",
         "test:table": "node test-table-structure.js",
         "test:auth": "node test-auth-endpoints.js",
         "migrate:client-portal": "node scripts/client-portal-migration.js",
-        "migrate:db": "node scripts/client-portal-migration.js"
+        "migrate:db": "node scripts/client-portal-migration.js",
+        "migrate:twilio": "node scripts/twilio-migration.js",
+        "test:twilio": "node test-twilio-api.js"
     },
     "keywords": [
         "junk-removal",
@@ -36,13 +38,14 @@
     "author": "Your Name",
     "license": "MIT",
     "dependencies": {
+        "@twilio/voice-sdk": "^2.15.0",
         "axios": "^1.6.0",
         "bcrypt": "^6.0.0",
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
-        "express": "^4.18.2",
+        "dotenv": "^16.6.1",
+        "express": "^4.21.2",
         "express-rate-limit": "^7.1.5",
         "helmet": "^7.1.0",
         "joi": "^17.11.0",
@@ -50,7 +53,8 @@
         "moment": "^2.29.4",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "mysql2": "^3.6.5",
+        "mysql2": "^3.14.5",
+        "twilio": "^4.23.0",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
