--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "author": "Your Name",
     "license": "MIT",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.886.0",
+        "@aws-sdk/s3-request-presigner": "^3.886.0",
         "@twilio/voice-sdk": "^2.15.0",
         "axios": "^1.6.0",
         "bcrypt": "^6.0.0",
@@ -48,6 +50,8 @@
         "dotenv": "^16.6.1",
         "express": "^4.21.2",
         "express-rate-limit": "^7.1.5",
+        "express-validator": "^7.2.1",
+        "fluent-ffmpeg": "^2.1.3",
         "helmet": "^7.1.0",
         "joi": "^17.11.0",
         "jsonwebtoken": "^9.0.2",
